Add banner and profile button

--- a/resorses/index.html
+++ b/resorses/index.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PlayTopia</title>
-    <link rel="icon" href="./images/Logo nav.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="icon" href="./images/Logo nav.png" type="image/x-icon" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <nav>
-        <div class="left-item">
-           <img src="./images/Logo nav.png" alt="Logo">
-        </div>
-        <ul class="right-items">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+      <div class="left-item">
+        <img src="./images/Logo nav.png" alt="Logo" />
+      </div>
+      <ul class="right-items">
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Add Game</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><img src="./images/Profile Img nav.png" alt="Profile" /></li>
+      </ul>
     </nav>
-<main>
+    <main>
+      <div class="banner">
+        <img src="./images/BANNER.png" alt="BANNER" />
+      </div>
+    </main>
 
-
-
-
-
-</main>
-
-
-
-<footer>
-    <p>&copy; 2024 PlayTopia. All rights reserved.</p>
-</footer>
-   
-</body>
+    <footer>
+      <p>&copy; 2024 PlayTopia. All rights reserved.</p>
+    </footer>
+  </body>
 </html>
