Add Popular Games menu

--- a/resorses/index.html
+++ b/resorses/index.html
@@ -20,9 +20,41 @@
         <li><img src="./images/Profile Img nav.png" alt="Profile" /></li>
       </ul>
     </nav>
+
     <main>
       <div class="banner">
         <img src="./images/BANNER.png" alt="BANNER" />
+      </div>
+
+      <div class="popular-games">
+        <h2>POPULAR GAMES</h2>
+        <p>CHOOSE YOUR OWN</p>
+      </div>
+
+      <div>
+        <ul class="games-row">
+          <li>
+            <img
+              src="https://upload.wikimedia.org/wikipedia/en/b/be/World_of_Warcraft_Wrath_of_the_Lich_King.png"
+              alt="World_of_Warcraft_Wrath_of_the_Lich_King"
+            />
+            <p>World of Warcraft: Wrath of the Lich King</p>
+          </li>
+          <li>
+            <img
+              src="https://cdn.europosters.eu/image/1300/posters/the-last-of-us-2-ellie-i76718.jpg"
+              alt="The_Last_Of_Us"
+            />
+            <p>The Last Of Us Part 2</p>
+          </li>
+          <li>
+            <img
+              src="https://upload.wikimedia.org/wikipedia/en/d/d2/Don%27t_Starve_cover.jpg"
+              alt="Don't_Starve"
+            />
+            <p>Don't Starve</p>
+          </li>
+        </ul>
       </div>
     </main>
 
