Search bar created

--- a/resorses/store.html
+++ b/resorses/store.html
@@ -5,11 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style_store.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
   </head>
   <body>
     <main>
       <div class="banner">
         <img src="./images/Store_Banner.png" alt="banner" />
+      </div>
+      <div class="search_container">
+        <div class="search_panel">
+          <div>
+            <p>Action</p>
+          </div>
+          <div>
+            <p>Adventure</p>
+          </div>
+          <div>
+            <p>Horror</p>
+          </div>
+          <div>
+            <p>Puzzles</p>
+          </div>
+          <div>
+            <p>Strategy</p>
+          </div>
+          <div>
+            <p>Sports</p>
+          </div>
+
+          <div class="search_bar">
+            <input type="text" placeholder="Search..." />
+            <button type="submit">
+              <i class="fas fa-search"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </main>
   </body>
