--- a/resorses/about_us.html
+++ b/resorses/about_us.html
@@ -8,27 +8,15 @@
   </head>
   <body>
     <main>
-        <div class="article">
-
-            <h1>AB</h1><h1>OUT US</h1>
-        </div>
+      <div class="article">
+        <h1>AB</h1>
+        <h1>OUT US</h1>
+      </div>
       <div class="about_container">
         <img src="./images/About_us_Baner.png" alt="" />
         <div>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Delectus
-            quis ut aspernatur praesentium illo, ullam animi commodi
-            voluptatibus cum inventore deserunt maiores atque hic velit,
-            corporis temporibus quod aliquam at provident. Ducimus repudiandae
-            voluptatum atque nobis aut sapiente sit impedit aliquam et harum,
-            hic amet perferendis provident cupiditate. Laborum aliquid eos
-            pariatur consequatur cum excepturi magnam ea neque, voluptas, sit
-            voluptate eligendi! Debitis perferendis atque voluptas. Eligendi
-            maiores, voluptatibus quia aperiam quisquam sequi nihil. Aspernatur
-            culpa recusandae cum totam, repellat asperiores illo deleniti
-            similique ex aperiam molestiae minima tempora consequatur veritatis
-            sequi laboriosam. Sequi aperiam reprehenderit et facilis architecto
-            rem.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt illo reprehenderit nisi nam tenetur ea similique aut repudiandae ratione eveniet! Omnis aut iste, exercitationem minus corrupti eum dolor corporis officia quam distinctio hic quasi fugit excepturi ipsam, quidem reprehenderit ut maxime voluptates optio cupiditate consequuntur nisi eligendi. Eaque voluptatibus in eos commodi dignissimos ut libero dolorem magni debitis. Sunt nostrum quidem aut alias. Consequatur modi nemo, excepturi maiores cumque commodi aut, aperiam cupiditate quia, fugiat nam eius accusantium consectetur obcaecati.
           </p>
         </div>
       </div>
