--- a/resorses/about_us.html
+++ b/resorses/about_us.html
@@ -16,7 +16,16 @@
         <img src="./images/About_us_Baner.png" alt="" />
         <div>
           <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt illo reprehenderit nisi nam tenetur ea similique aut repudiandae ratione eveniet! Omnis aut iste, exercitationem minus corrupti eum dolor corporis officia quam distinctio hic quasi fugit excepturi ipsam, quidem reprehenderit ut maxime voluptates optio cupiditate consequuntur nisi eligendi. Eaque voluptatibus in eos commodi dignissimos ut libero dolorem magni debitis. Sunt nostrum quidem aut alias. Consequatur modi nemo, excepturi maiores cumque commodi aut, aperiam cupiditate quia, fugiat nam eius accusantium consectetur obcaecati.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt illo
+            reprehenderit nisi nam tenetur ea similique aut repudiandae ratione
+            eveniet! Omnis aut iste, exercitationem minus corrupti eum dolor
+            corporis officia quam distinctio hic quasi fugit excepturi ipsam,
+            quidem reprehenderit ut maxime voluptates optio cupiditate
+            consequuntur nisi eligendi. Eaque voluptatibus in eos commodi
+            dignissimos ut libero dolorem magni debitis. Sunt nostrum quidem aut
+            alias. Consequatur modi nemo, excepturi maiores cumque commodi aut,
+            aperiam cupiditate quia, fugiat nam eius accusantium consectetur
+            obcaecati.
           </p>
         </div>
       </div>
